# PicoRenderer

./: CMakeLists.txt  LICENSE  faces.c  faces.h  fixedpt.h  gourad.c  help.c  help.h  main.c  matrix.c  matrix.h  models.h  shader.h  tank.faces.bin.c  tank.faces.bin.h  tank.txc.bin.c  tank.txc.bin.h  tank.uvs.bin.c  tank.uvs.bin.h  tank.vertices.bin.c  tank.vertices.bin.h  texture.raw.c  texture.raw.h
